trunk/Archive2/f2/e3149fcb2b14be/output
main.cpp:4:5: error: stray '\303' in program
     printf(“%c %d \n“, ch, ch); 
     ^
main.cpp:4:5: error: stray '\242' in program
main.cpp:4:5: error: stray '\342' in program
main.cpp:4:5: error: stray '\202' in program
main.cpp:4:5: error: stray '\254' in program
main.cpp:4:5: error: stray '\305' in program
main.cpp:4:5: error: stray '\223' in program
main.cpp:4:5: error: stray '\' in program
main.cpp:4:5: error: stray '\303' in program
main.cpp:4:5: error: stray '\242' in program
main.cpp:4:5: error: stray '\342' in program
main.cpp:4:5: error: stray '\202' in program
main.cpp:4:5: error: stray '\254' in program
main.cpp:4:5: error: stray '\305' in program
main.cpp:4:5: error: stray '\223' in program
main.cpp: In function 'int main()':
main.cpp:4:19: error: expected primary-expression before '%' token
     printf(“%c %d \n“, ch, ch); 
                   ^
main.cpp:4:20: error: 'c' was not declared in this scope
     printf(“%c %d \n“, ch, ch); 
                    ^
main.cpp:4:23: error: 'd' was not declared in this scope
     printf(“%c %d \n“, ch, ch); 
                       ^
main.cpp:4:36: error: 'ch' was not declared in this scope
     printf(“%c %d \n“, ch, ch); 
                                    ^
