trunk/Archive2/f2/e3149fcb2b14be/main.cpp
#include <stdio.h>

int main() {
    printf(“%c %d \n“, ch, ch); 
}